--- a/movieapi/src/App.css
+++ b/movieapi/src/App.css
@@ -5,8 +5,22 @@
 
   display: grid;
   gap: 15px;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 .movie-cover {
   width: 100%;
+}
+
+.title {
+  text-align: center;
+}
+
+.input-class{
+  text-align: center;
+  margin-bottom: 2%;
+  margin-left: 400px;
+  margin-right: 400px;
+  display: grid;
+  gap: 10px;
+  grid-template-columns: 1fr 1fr 1fr;
 }
