--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -4,14 +4,14 @@ body {
 }
 
 .container {
-  max-width: 1000px;
+  max-width: 90%;
   margin-left: auto;
   margin-right: auto;
 
   display: grid;
-  gap: 15px;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  background-color: #0f1014;
+  gap: 45px;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  
 }
 .movie-cover {
   width: 100%;
@@ -35,72 +35,5 @@ body {
   gap: 10px;
   grid-template-columns: 1fr 1fr 1fr;
 }
-.movie-card{
-  background-color: #090a0e;
-}
-
-.select-dropdown,
-.select-dropdown * {
-  margin: 0;
-  padding: 0;
-  position: relative;
-  box-sizing: border-box;
-}
-.select-dropdown {
-  position: relative;
-  background-color: #E6E6E6;
-  border-radius: 4px;
-}
-.select-dropdown select {
-  font-size: 1rem;
-  font-weight: normal;
-  max-width: 100%;
-  padding: 8px 24px 8px 10px;
-  border: none;
-  background-color: transparent;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-  appearance: none;
-}
-.select-dropdown select:active, .select-dropdown select:focus {
-  outline: none;
-  box-shadow: none;
-}
-.select-dropdown:after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  right: 8px;
-  width: 0;
-  height: 0;
-  margin-top: -2px;
-  border-top: 5px solid #aaa;
-  border-right: 5px solid transparent;
-  border-left: 5px solid transparent;
-}
 
 
-
-
-.button-2 {
-  background-color: rgba(51, 51, 51, 0.05);
-  border-radius: 8px;
-  border-width: 0;
-  color: #333333;
-  cursor: pointer;
-  display: inline-block;
-  font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 20px;
-  list-style: none;
-  margin: 0;
-  padding: 10px 12px;
-  text-align: center;
-  transition: all 200ms;
-  vertical-align: baseline;
-  white-space: nowrap;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-}
