--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -36,4 +36,13 @@ body {
   grid-template-columns: 1fr 1fr 1fr;
 }
 
+.page-button{
+  color: rgba(71, 79, 110, 1);
+}
+
+.page-count{
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+}
+
 
