--- a/src/CSS/MovieCard.css
+++ b/src/CSS/MovieCard.css
@@ -26,7 +26,7 @@
 .poster-image {
   width: auto;
   height: auto;
-  max-height: 60vh;
+  max-height: 63vh;
   border-radius: 25px;
 }
 
@@ -65,7 +65,7 @@
 }
 
 .movie-title {
-    text-align: center;
+   text-align: center;
     padding: 10px;
     font-family: 'Roboto', sans-serif;
 
@@ -78,17 +78,26 @@
 }
 
 .movie-name {
-  text-align: center;
-  font-size: 60px;
+  
+  font-size: 3rem;
   font-weight: bold;
 }
 
 .overview{
-  font-size: 30px;
+  font-size: 1.2rem;
 }
 
 .rating{
-  font-size: 30px;
+  font-size: 1.5rem;
+}
+
+.genre-box {
+  border-radius: 20px;
+  background-color: rgb(63, 63, 63);
+  margin: .4rem;
+  font-size: 1.1rem;
+  font-weight: bold;
+
 }
 
 
