--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -44,5 +44,22 @@ body {
   padding-bottom: 0px;
   margin-bottom: 0px;
 }
+.icon {
+  width: 13%;
+  height: 13%;
+  margin: 1rem;
+}
+
+.title {
+  font-size: 3rem;
+  text-align: center;
+  padding-bottom: 5%;
+  padding-top: 5%;
+  color: white;
+}
+
+.navbar-css {
+  padding: 0;
+}
 
 
