--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -45,21 +45,31 @@ body {
   margin-bottom: 0px;
 }
 .icon {
-  width: 13%;
-  height: 13%;
-  margin: 1rem;
+  width: 3rem;
+  height: 3rem;
+  margin: 0.5rem;
 }
 
-.title {
-  font-size: 3rem;
-  text-align: center;
-  padding-bottom: 5%;
-  padding-top: 5%;
+.navbar-title {
+  text-align: left;
+  font-size: 2.5rem;
   color: white;
+  padding: auto;
 }
 
 .navbar-css {
-  padding: 0;
+  text-align: left;
 }
 
+.navbar .icon-frame span{
+  position:relative;
+  top:0.5rem;
+ }
 
+.App header nav{
+  line-height:1em;
+}
+
+.App header form{
+  padding-top:2rem;
+ }
