--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -13,6 +13,12 @@ body {
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   
 }
+@media (max-width: 800px) {
+  .container{
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  
+}
 .movie-cover {
   width: 100%;
 }
